# image_manip

./: README.md
.github/workflows/: main.yml  ubuntu_20_04.yml  ubuntu_22_04.yml
image_manip/: CMakeLists.txt  nodelet_iir_image.xml  nodelet_image_manip.xml  package.xml  setup.py
image_manip/cfg/: Convert.cfg  Delay.cfg  IIRImage.cfg  ImageDeque.cfg  Rotate90.cfg  RotoZoom.cfg
image_manip/config/: convert.perspective  iir.perspective  rotozoom.perspective
image_manip/include/image_manip/: color.hpp  convert.h  cv_distort_image.h  distort.h  iir_image.h  iir_image.hpp  image_delay.h  image_deque.h  image_deque.hpp  pad.h  resize.h  rotate90.h  roto_zoom.h  save_image.hpp  utility.h  utility_ros.h
image_manip/launch/: color_launch.py  composite_color_launch.py  convert.launch  deque.launch  distort.launch  iir.launch  iir_image_launch.py  iir_screen_grab.launch  image_pub_launch.py  resize.launch  resize_launch.py  rotate90.launch  roto_zoom_launch.py  rotozoom.launch  stop_motion_launch.py
image_manip/scripts/: animated_gif.py  color_imgui.py  image_folder_publisher.py  pub_compressed_image.py  resize_imgui.py  scale_camera_info.py  setup_image_pub_gui.py  setup_roto_gui.py  stop_motion_imgui.py  zenoh_image_folder_publisher.py
image_manip/src/: color.cpp  convert.cpp  cv_distort_image.cpp  distort.cpp  distort_image.cpp  iir_image.cpp  iir_image_node.cpp  image_delay.cpp  image_delay_node.cpp  image_deque.cpp  image_deque_node.cpp  image_folder_publisher_node.cpp  image_publisher.cpp  pad.cpp  resize.cpp  resize_node.cpp  rotate90.cpp  roto_zoom.cpp  roto_zoom_node.cpp  save_image.cpp  utility.cpp  utility_ros.cpp
image_manip/src/image_manip/: __init__.py  util.py
image_manip/src/nodes/: color.cpp  color_imgui_composite.cpp  iir_image.cpp  image_deque.cpp  save_image.cpp
image_manip2/: CMakeLists.txt  package.xml
image_manip2/launch/: resize_launch.py  roto_zoom_launch.py  stop_motion_launch.py
image_manip2/src/: image_publisher.cpp  resize.cpp  roto_zoom.cpp
image_manip_demo/: CMakeLists.txt  package.xml
image_manip_demo/launch/: convert.launch
image_manip_demo/scripts/: open3d_viz.py
old_image_manip/cfg/: Delay.cfg  ImageDeque.cfg  Resize.cfg  RotoZoom.cfg
old_image_manip/config/: convert.perspective  deque.perspective  iir.perspective  rotozoom.perspective
old_image_manip/include/image_manip/: iir_image.h  image_delay.h
old_image_manip/launch/: convert.launch  rotozoom.launch
old_image_manip/src/: convert.cpp  convert_node.cpp  iir_image.cpp  iir_image_node.cpp  image_delay.cpp  roto_zoom.cpp  utility_ros.cpp
