<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>image_manip</name>
  <version>0.0.2</version>
  <description>Sum up images using coefficients provided by dr.
    Parts adapted from vimjay http://github.com/lucasw/vimjay
  </description>
  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>
  <license>BSD 3.0</license>
  <url type="website">https://github.com/lucasw/image_manip</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>class_loader</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>imgui_ros</build_depend>
  <build_depend>internal_pub_sub</build_depend>
  <exec_depend>class_loader</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>imgui_ros</exec_depend>
  <exec_depend>internal_pub_sub</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
