<?xml version="1.0"?>
<package>
  <name>image_manip_demo</name>
  <version>0.0.1</version>
  <description>Sum up images using coefficients provided by dr.
    Parts adapted from vimjay http://github.com/lucasw/vimjay
  </description>

  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>

  <license>BSD 3.0</license>

  <url type="website">https://github.com/lucasw/image_manip</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <run_depend>image_manip</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>usb_cam</run_depend>
  <run_depend>v4l2ucp</run_depend>
  <run_depend>vimjay</run_depend>

</package>
